--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title> RECIEPE PRATICAL</title>
 </head>
 <body>
+    <img src="salad image.webp" alt="" srcset="">
     <h1>Salad reciepe</h1>
     <h2>Ingredients</h2>
     <p>Lettuce</p>
